# bank-account-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml
src/: __init__.py  accounts.py  bank.py  config.py  main.py  schemas.py
src/static/: index.html
tests/: conftest.py  test_accounts.py  test_api.py  test_bank.py
